CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)
PROJECT(RoadFighter)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake/Modules/)
SET(CMAKE_CXX_FLAGS  "-Wall")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})

FIND_PACKAGE(SFML 2.4.2 COMPONENTS graphics system window)

FILE(GLOB SRC src/*.cpp src/*.h)
INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})

SET(RF_INCLUDE_DIR lib/roadfighter)
ADD_SUBDIRECTORY(lib/roadfighter)

INCLUDE_DIRECTORIES(${RF_INCLUDE_DIR})

SET(RF_SFML_DIR lib/roadfighterSFML)
ADD_SUBDIRECTORY(lib/roadfighterSFML)

INCLUDE_DIRECTORIES(${RF_SFML_DIR})

SET(ROADFIGHTER_SRC main/main.cpp main/Transformation.h main/Transformation.cpp main/PlayerCar.cpp main/PlayerCar.h main/RacingCar.cpp main/RacingCar.h)
ADD_EXECUTABLE(RoadFighter ${ROADFIGHTER_SRC})
TARGET_LINK_LIBRARIES(RoadFighter ${SFML_LIBRARIES})
TARGET_LINK_LIBRARIES(RoadFighter roadfighter)
TARGET_LINK_LIBRARIES(RoadFighter roadfighterSFML)
ADD_DEPENDENCIES(RoadFighter roadfighter)
ADD_DEPENDENCIES(RoadFighter roadfighterSFML)




