SET(RF_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Entity.h ${CMAKE_CURRENT_SOURCE_DIR}/Entity.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/PlayerCarEntity.h ${CMAKE_CURRENT_SOURCE_DIR}/PlayerCarEntity.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/RacingCarEntity.h ${CMAKE_CURRENT_SOURCE_DIR}/RacingCarEntity.cpp)

SET(LIB_TYPE SHARED)

ADD_LIBRARY(roadfighter ${LIB_TYPE} ${RF_SRC})